# Renderide

./: .gitignore  .lfsconfig  .pre-commit-config.yaml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  Generators.sln  README.md  SECURITY.md  SharedTypeGenerator.sln  clippy.toml  config.ini  configuration.ini  index.html
.github/: dependabot.yml
RenderidePatches/: RenderidePatches.csproj  ShaderLabelBuilder.cs  ShaderUploadLabelPatch.cs
SharedTypeGenerator/: Program.cs
SharedTypeGenerator.Tests/: CrossLanguageRoundtripTests.cs  InstanceComparer.cs  RandomInstancePopulator.cs  RoundtripTestBase.cs  SharedTypeGenerator.Tests.csproj  TestEntityPool.cs
UnityShaderConverter.Tests/: GlobMatcherTests.cs  (+2 more)
crates/renderide-test/: Cargo.toml
crates/renderide-test/src/: cli.rs  error.rs  golden.rs  host.rs  lib.rs  main.rs  scene.rs  scene_dsl.rs
crates/renderide-test/src/host/: asset_upload.rs  handshake.rs  ipc_setup.rs  lockstep.rs  mod.rs  scene_session.rs
crates/renderide-test/src/host/scene_session/: config.rs  consts.rs  mod.rs  png_readback.rs  scene_state.rs  shutdown.rs  spawn.rs
crates/renderide-test/src/scene/: mesh.rs  mesh_payload.rs  mod.rs  perlin.rs  sphere.rs  texture.rs  torus.rs
crates/renderide-test/src/scene_dsl/: cases.rs  output.rs  runner.rs  suite.rs  tolerance.rs
crates/renderide-test/tests/: cli_parse_resolution.rs  golden_mismatch_writes_diff.rs  golden_missing_golden.rs  golden_round_trip.rs  integration_torus_unlit_perlin.rs  integration_unlit_sphere.rs  png_stability_state_machine.rs  spawn_args_table.rs  sphere_pipeline_end_to_end.rs
(+2075 files in other folders)
