[package]
name = "renderide-test"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "renderide-test"
path = "src/main.rs"

[dependencies]
renderide-shared = { path = "../renderide-shared" }
logger = { path = "../logger" }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
image-compare = "0.4"
glam = { version = "0.32", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.12"
thiserror = "2"
tempfile = "3"

[lints]
workspace = true
